RESOLVED FIXED52242
WebKit2: "Webpages not responding" dialog appears when <select> popup menu is showing
https://bugs.webkit.org/show_bug.cgi?id=52242
Summary WebKit2: "Webpages not responding" dialog appears when <select> popup menu is...
Jeff Miller
Reported 2011-01-11 12:41:25 PST
WebKit2: "Webpages not responding" dialog appears when <select> popup menu is showing
Attachments
Patch (1.31 KB, patch)
2011-01-11 12:44 PST, Jeff Miller
no flags
Jeff Miller
Comment 1 2011-01-11 12:42:36 PST
To reproduce: 1. Go to data:text/html,<select><option>a 2. Click on the <select> to open its menu 3. Wait for 14 seconds The "Webpages not responding" dialog appears.
Jeff Miller
Comment 2 2011-01-11 12:44:53 PST
WebKit Review Bot
Comment 3 2011-01-11 12:45:52 PST
Comment on attachment 78583 [details] Patch Rejecting attachment 78583 [details] from commit-queue. jeffm@apple.com does not have committer permissions according to http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py. - If you do not have committer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
WebKit Commit Bot
Comment 4 2011-01-11 16:33:54 PST
Comment on attachment 78583 [details] Patch Clearing flags on attachment: 78583 Committed r75568: <http://trac.webkit.org/changeset/75568>
Note You need to log in before you can comment on or make changes to this bug.