2011-01-11  Jeff Miller  <jeffm@apple.com>

Reviewed by John Sullivan.

        WebKit2: "Webpages not responding" dialog appears when <select> popup menu is showing
        https://bugs.webkit.org/show_bug.cgi?id=52242

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::showPopupMenu):
        On Windows, stop the responsiveness timer before calling showPopupMenu().

Canonical link: https://commits.webkit.org/65861@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75568 268f45cc-cd09-0410-ab3c-d52691b4dbfc